New Crowdin updates (#515)
* New translations messages.json (German)

* New translations messages.json (German)

* New translations messages.json (German)

* New translations messages.json (Dutch)

* New translations messages.json (Korean)

* New translations messages.json (Dutch)

* New translations messages.json (Czech)

* New translations messages.json (Dutch)

* New translations messages.json (Japanese)

* New translations messages.json (Thai)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (Vietnamese)

* New translations messages.json (Chinese Traditional)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Ukrainian)

* New translations messages.json (Turkish)

* New translations messages.json (Swedish)

* New translations messages.json (Serbian (Cyrillic))

* New translations messages.json (Slovak)

* New translations messages.json (Russian)

* New translations messages.json (Portuguese)

* New translations messages.json (Polish)

* New translations messages.json (Norwegian)

* New translations messages.json (Italian)

* New translations messages.json (Czech)

* New translations messages.json (Hungarian)

* New translations messages.json (Hebrew)

* New translations messages.json (Finnish)

* New translations messages.json (Greek)

* New translations messages.json (Danish)

* New translations messages.json (Catalan)

* New translations messages.json (Bulgarian)

* New translations messages.json (Arabic)

* New translations messages.json (Afrikaans)

* New translations messages.json (Spanish)

* New translations messages.json (French)

* New translations messages.json (Romanian)

* New translations messages.json (Korean)

* New translations messages.json (German)

* New translations messages.json (Sinhala)

* New translations messages.json (Chinese Traditional)

* New translations messages.json (It

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -503,9 +503,13 @@
     "message": "Obnovit vše",
     "description": "Reload all"
   },
+  "commandLabelToRootURL": {
+    "message": "To root URL",
+    "description": "To root URL"
+  },
   "commandLabelURLLevelUp": {
-    "message": "O úroveň výš",
-    "description": "URL hierarchy up"
+    "message": "URL level up",
+    "description": "URL level up"
   },
   "commandLabelIncreaseURLNumber": {
     "message": "Zvýšit číslo v URL",
@@ -532,8 +536,8 @@
     "description": "Open link in new private window"
   },
   "commandLabelSearchTextSelection": {
-    "message": "Hledat vybraný text",
-    "description": "Search selected text"
+    "message": "Search text selection",
+    "description": "Search text selection"
   },
   "commandLabelSearchClipboard": {
     "message": "Hledat ve schránce",
@@ -810,6 +814,10 @@
   "commandDescriptionReloadAllTabs": {
     "message": "Obnoví všechny panely.",
     "description": "Reloads all tabs."
+  },
+  "commandDescriptionToRootURL": {
+    "message": "Goes to the main page of the website.",
+    "description": "Goes to the main page of the website."
   },
   "commandDescriptionURLLevelUp": {
     "message": "Přejde v adrese URL o úroveň výš.",
@@ -1310,11 +1318,11 @@
     "description": "Search"
   },
   "commandBarAdditionalPermissionsText": {
-    "message": "This command requires additional permissions: ",
+    "message": "Tento příkaz vyžaduje další oprávnění: ",
     "description": "This command requires additional permissions: "
   },
   "commandBarAdditionalSettingsText": {
-    "message": "This command has additional settings.",
+    "message": "Tento příkaz má další nastavení.",
     "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
